# cortex-harness

./: .env-sample  .env.example  .env_sample  .gitignore  INSTALLER_GUIDE.md  ReadMe.md  Readme.md  cortex-harness.sln  dev-global.cmd  dev.bat  dev.ps1  dev.sh  dev_sync.py  entity_extractors.py  excel_table_pipeline_skeleton.py  graphrag_ingest_langextract.py  graphrag_query_langextract.py  install-windows.bat  install-windows.ps1  mcp_graph_rag.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.cortext-harness/config/: dev.json  team.json
.cortext-harness/sync-state/: da6b6bc893f2.json
cli/: dev.py
code-tiny/: .env.example  .gitignore  Design.md  LICENSE  README.md  list_db.py  mcp.sh  requirements.txt  run_mcp.sh  run_migration.py  sub.md  todo_event.md
code-tiny/docs/: Optimized.mcp.md
code-tiny/livingdoc/: README.md  living-doc-link.py  living-doc-louvain.py  living-doc-pipeline.py  living-doc-summarize-infra.py  living-doc-summarize.py  living-doc-vectorize-infra.py  living-doc-vectorize.py  louvain.md  strategy.md
code-tiny/mcp/: fastmcp_server.py  tool_metadata.py  unified_mcp.py
code-tiny/scripts/: cleanup_repo_graph.py  gen_semantic_example.py  ingest_workflows.py  link_project_repos.py  migrate_repo_file_edges.py  setup_constraints.py  (+1 more)
cortex_harness/: dev.py
doc/: strategy.excel.optimize.md
doc-tiny/: .env-sample  0_reset_all.py  Readme.md  entity_extractors.py  enviroment_loader.py  graphrag_ingest_langextract.py  graphrag_query_langextract.py  mcp_graph_rag.py
docs/: HARNESS_WORKFLOW.md
installers/: README.md
(+197 files in other folders)
